openshift/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-lb-route
spec:
  to:
    kind: Service
    name: nginx-lb-service
  port:
    targetPort: http
